Mensagem ATENCAO discando no display através do temporizador

--- a/exemplos_display_oled/display_oled_new/CMakeLists.txt
+++ b/exemplos_display_oled/display_oled_new/CMakeLists.txt
@@ -39,7 +39,8 @@ add_executable(display_oled main.c
     src/ssd1306_init.c
     src/ssd1306_text.c
     src/ssd1306_utils.c
-    src/oled_setup.c)
+    src/oled_setup.c
+    src/oled_messages.c)
 
 pico_set_program_name(display_oled "display_oled")
 pico_set_program_version(display_oled "0.1")
