--- a/exemplo_buzzer/buzzer_pwm/CMakeLists.txt
+++ b/exemplo_buzzer/buzzer_pwm/CMakeLists.txt
@@ -15,9 +15,9 @@ if(WIN32)
 else()
     set(USERHOME $ENV{HOME})
 endif()
-set(sdkVersion 2.1.1)
-set(toolchainVersion 14_2_Rel1)
-set(picotoolVersion 2.1.1)
+set(sdkVersion 1.5.1)
+set(toolchainVersion 13_3_Rel1)
+set(picotoolVersion 2.0.0)
 set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
 if (EXISTS ${picoVscode})
     include(${picoVscode})
@@ -28,38 +28,39 @@ set(PICO_BOARD pico_w CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(picow_access_point_background C CXX ASM)
+project(buzzer_pwm C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(picow_access_point_background main.c dhcpserver/dhcpserver.c dnsserver/dnsserver.c)
+add_executable(buzzer_pwm buzzer_pwm.c src/buzzer.c)
 
-pico_set_program_name(picow_access_point_background "picow_access_point_background")
-pico_set_program_version(picow_access_point_background "0.1")
+pico_set_program_name(buzzer_pwm "buzzer_pwm")
+pico_set_program_version(buzzer_pwm "0.1")
 
 # Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(picow_access_point_background 0)
-pico_enable_stdio_usb(picow_access_point_background 1)
+pico_enable_stdio_uart(buzzer_pwm 0)
+pico_enable_stdio_usb(buzzer_pwm 1)
 
 # Add the standard library to the build
-target_link_libraries(picow_access_point_background pico_cyw43_arch_lwip_threadsafe_background pico_stdlib)
+target_link_libraries(buzzer_pwm
+        pico_stdlib
+        hardware_pwm
+        hardware_clocks)
 
 # Add the standard include files to the build
-target_include_directories(picow_access_point_background PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}
-        ${CMAKE_CURRENT_LIST_DIR}/dhcpserver
-        ${CMAKE_CURRENT_LIST_DIR}/dnsserver
-        )
+target_include_directories(buzzer_pwm PRIVATE
+  ${CMAKE_CURRENT_LIST_DIR}
+  ${CMAKE_CURRENT_LIST_DIR}/inc
+  ${CMAKE_CURRENT_LIST_DIR}/src
+)
 
 # Add any user requested libraries
-#target_link_libraries(picow_access_point_background)
-
-pico_add_extra_outputs(picow_access_point_background)
-
-# You can change the address below to change the address of the access point
-    pico_configure_ip4_address(picow_access_point_background PRIVATE
-    CYW43_DEFAULT_IP_AP_ADDRESS 192.168.4.1
+target_link_libraries(buzzer_pwm 
+        
         )
+
+pico_add_extra_outputs(buzzer_pwm)
+
