--- a/exemplos_foreground_background/u1c10_atividade5/CMakeLists.txt
+++ b/exemplos_foreground_background/u1c10_atividade5/CMakeLists.txt
@@ -15,9 +15,9 @@ if(WIN32)
 else()
     set(USERHOME $ENV{HOME})
 endif()
-set(sdkVersion 1.5.1)
-set(toolchainVersion 13_3_Rel1)
-set(picotoolVersion 2.0.0)
+set(sdkVersion 2.1.1)
+set(toolchainVersion 14_2_Rel1)
+set(picotoolVersion 2.1.1)
 set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
 if (EXISTS ${picoVscode})
     include(${picoVscode})
@@ -28,35 +28,31 @@ set(PICO_BOARD pico_w CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(display_oled C CXX ASM)
+project(Atividade_5 C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(display_oled main.c 
-    src/ssd1306_init.c
-    src/ssd1306_text.c
-    src/ssd1306_utils.c
-    src/oled_setup.c)
+add_executable(Atividade_5 Atividade_5.c funcao_atividade_.c funcoes_neopixel.c)
 
-pico_set_program_name(display_oled "display_oled")
-pico_set_program_version(display_oled "0.1")
+pico_set_program_name(Atividade_5 "Atividade_5")
+pico_set_program_version(Atividade_5 "0.1")
 
 # Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(display_oled 0)
-pico_enable_stdio_usb(display_oled 1)
+pico_enable_stdio_uart(Atividade_5 0)
+pico_enable_stdio_usb(Atividade_5 1)
 
 # Add the standard library to the build
-target_link_libraries(display_oled pico_stdlib)
+target_link_libraries(Atividade_5 pico_stdlib hardware_adc hardware_gpio hardware_timer pico_multicore hardware_pio hardware_clocks)
 
 # Add the standard include files to the build
-target_include_directories(display_oled PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/inc)
+target_include_directories(Atividade_5 PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
 # Add any user requested libraries
-target_link_libraries(display_oled 
-        hardware_i2c)
+#target_link_libraries(Atividade_5 )
 
-pico_add_extra_outputs(display_oled)
+pico_add_extra_outputs(Atividade_5)
 
+pico_generate_pio_header(Atividade_5 ${CMAKE_CURRENT_LIST_DIR}/ws2818b.pio)
